syntax = "proto3";

package user;

service UserService {
    // Queries
    rpc GetAll (GetAllRequest) returns (UserResponse) {
    }

    rpc GetByName (GetByNameRequest) returns (User) {
    }

    // Commands
    rpc AddUser (User) returns (GenericResponse) {
    }

    rpc UpdateUser (User) returns (GenericResponse) {
    }

    rpc DeleteUser (User) returns (GenericResponse) {
    }
}

message GetAllRequest {
}

message GetByNameRequest {
    string name = 1;
}

message User {
    string alias = 1;
    string firstName = 2;
    string lastName = 3;
    string job = 4;
}

message UserResponse {
    repeated User users = 1;
}

message GenericResponse {
    string Message = 1;
}